fixed header nav spacing

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -11,6 +11,7 @@
     margin: 0;
     display: inline-flex;
     cursor: pointer;
+    margin-left: 30px;
 }
 
 .selectedTransparent {
@@ -19,6 +20,7 @@
     margin: 0;
     display: inline-flex;
     cursor: pointer;
+    margin-left: 30px;
 }
 
 .selectedTransparent:hover {
